rendering a cardModal when clicked from list

--- a/app/views/ui/card.html.erb
+++ b/app/views/ui/card.html.erb
@@ -95,7 +95,7 @@
                     <a class="light-button email-icon sm-icon"></a>
                   </div>
                   <div>
-                    <p>You haven't typed anything!</p>
+                    <p>You havent typed anything!</p>
                     <input type="submit" class="button not-implemented" value="Save"><i class="x-icon icon"></i>
                   </div>
                 </label>
