--- a/app/views/ui/card.html.erb
+++ b/app/views/ui/card.html.erb
@@ -101,13 +101,7 @@
                 </label>
               </div>
             </li>
-            <li>
-              <div class="member-container">
-                <div class="card-member small-size">VR</div>
-              </div>
-              <p><span class="member-name">Victor Reyes</span> changed the background of this board <small>yesterday at 4:53 PM</small>
-              </p>
-            </li>
+            <Action />
             <li class="activity-comment">
               <div class="member-container">
                 <div class="card-member">VR</div>
